# zair

./: Cargo.toml  README.md  typos.toml
crates/zair-cli/: Cargo.toml
crates/zair-cli/src/: main.rs
crates/zair-cli/src/cli/: mod.rs
crates/zair-cli/tests/: pipeline.rs  pipeline_soundness.rs
crates/zair-cli/tests/test_utils/: pipeline_harness.rs
crates/zair-core/: Cargo.toml
crates/zair-core/src/base/: digest.rs  mod.rs
crates/zair-core/src/schema/: config.rs  submission.rs
crates/zair-nonmembership/: Cargo.toml
crates/zair-nonmembership/src/gap_tree/: dense.rs  mod.rs  orchard.rs  sapling.rs
crates/zair-nonmembership/src/pool/: sapling.rs
crates/zair-nonmembership/src/sparse/: sapling.rs
crates/zair-nonmembership/tests/: dense_sparse_consistency.rs
crates/zair-orchard-circuit/src/circuit/: airdrop.rs
crates/zair-orchard-proofs/: Cargo.toml
crates/zair-orchard-proofs/src/: error.rs  instance.rs  keys.rs  lib.rs  tests.rs  types.rs
crates/zair-orchard-proofs/src/prover/: mod.rs
crates/zair-orchard-proofs/src/verifier/: mod.rs
crates/zair-sapling-circuit/src/: circuit.rs
crates/zair-sapling-proofs/: Cargo.toml
crates/zair-sapling-proofs/src/: lib.rs  types.rs
crates/zair-sapling-proofs/src/prover/: builder.rs  convenience.rs  mod.rs
crates/zair-sapling-proofs/src/verifier/: mod.rs
crates/zair-scan/src/: light_walletd.rs
crates/zair-scan/src/light_walletd/: config.rs  error.rs
crates/zair-sdk/: Cargo.toml
crates/zair-sdk/src/: commands.rs  lib.rs
crates/zair-sdk/src/api/: claims.rs  key.rs  mod.rs  prove.rs  scan.rs  sign.rs
crates/zair-sdk/src/commands/: airdrop_configuration.rs  claim_proofs.rs  claim_proofs_prove.rs  claim_submission_sign.rs  claim_submission_verify.rs  key.rs  nullifier_uniqueness.rs  orchard_params.rs  pool_processor.rs  signature_digest.rs  submission_messages.rs  workflows.rs
crates/zair-sdk/src/commands/submission_auth/: orchard.rs  sapling.rs
docs/: book.toml
docs/src/: security.md
docs/src/airdrop-proofs/: index.md  orchard.md  sapling.md
docs/src/cli/: config.md
docs/src/concepts/: value-commitments.md
docs/src/getting-started/: index.md
docs/src/integration/: index.md  namada.md
nix/: formatting.nix  git-hooks.nix
