[workspace]
resolver = "2"
members = [
  "crates/zair-nonmembership",
  "crates/zair-scan",
  "crates/zair-core",
  "crates/zair-sapling-circuit",
  "crates/zair-sapling-proofs",
  "crates/zair-orchard-circuit",
  "crates/zair-orchard-proofs",
  "crates/zair-sdk",
  "crates/zair-cli",
]

[workspace.package]
edition = "2024"
rust-version = "1.88.0"
repository = "https://github.com/eigerco/zcash-namada-airdrop"
license = "MIT"

[workspace.dependencies]
zair-nonmembership = { path = "crates/zair-nonmembership" }
zair-scan = { path = "crates/zair-scan" }
zair-core = { path = "crates/zair-core" }
zair-sapling-circuit = { path = "crates/zair-sapling-circuit" }
zair-sapling-proofs = { path = "crates/zair-sapling-proofs" }
zair-orchard-circuit = { path = "crates/zair-orchard-circuit" }
zair-orchard-proofs = { path = "crates/zair-orchard-proofs" }
zair-sdk = { path = "crates/zair-sdk" }
zair-cli = { path = "crates/zair-cli" }

assert_cmd = "2.1.2"
base64 = "0.22.1"
bip39 = "2.2.2"
blake2s_simd = "1.0.3"
blake2b_simd = "1.0.3"
bellman = "0.14"
bls12_381 = "0.8"
bridgetree = "0.7.0"
bytemuck = "1.24.0"
clap = "4.5.53"
clap_derive = "4.5.49"
config = { version = "0.15.19", default-features = false }
console-subscriber = "0.5.0"
dirs = "6.0.0"
dotenvy = "0.15.7"
eyre = "0.6.12"
ff = "0.13"
futures = "0.3.31"
group = "0.13"
halo2_gadgets = "0.3"
halo2_proofs = "0.3"
jubjub = "0.10"
ureq = "3.1.4"
hex = "0.4"
hex-literal = "0.4.1"
http = "1.4.0"
incrementalmerkletree = { version = "0.8.2" }
itertools = "0.14.0"
orchard = "0.11.0"
pasta_curves = "0.5"
prost = "0.14.1"
rand = "0.9.2"
rand_core = "0.6"
rand_xorshift = "0.3"
redjubjub = "0.8"
rpassword = "7.4.0"
rustls = "0.23.35"
sapling = { package = "sapling-crypto", version = "0.5" }
schemars = "1.1.0"
secrecy = "0.10.3"
serde = "1"
serde_json = "1"
serde_with = "3.16.1"
sha2 = "0.10"
shardtree = "0.6.1"
sled = "0.34.7"
tempfile = "3.24.0"
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-util = { version = "0.7.17" }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
zcash_client_backend = "0.21.0"
zcash_keys = "0.12.0"
zcash_primitives = "0.26.3"
zcash_protocol = "0.7.2"
zcash_proofs = "0.26.1"
zcash_spec = "0.2.1"
zeroize = "1.8"
zip32 = "0.2.1"

[patch.crates-io]
halo2_gadgets = { git = "https://github.com/eigerco/halo2" }
orchard = { git = "https://github.com/eigerco/orchard" }
sapling-crypto = { git = "https://github.com/eigerco/sapling-crypto" }

[workspace.lints.rust]
missing_docs = { level = "warn", priority = -1 }
unsafe_code = "warn"
unused_imports = { level = "warn", priority = -1 }
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
as_conversions = "deny"
float_arithmetic = "deny"
indexing_slicing = "deny"
missing_asserts_for_indexing = "deny"
print_stdout = "deny"
unwrap_used = "deny"
too_many_lines = "deny"
wildcard_enum_match_arm = "deny"

complexity = { priority = -2, level = "deny" }
perf = { priority = -3, level = "deny" }
correctness = { priority = -4, level = "deny" }
style = { priority = -6, level = "deny" }
suspicious = { priority = -7, level = "deny" }
pedantic = { priority = -8, level = "deny" }
nursery = { priority = -9, level = "deny" }

[profile.release]
lto = "thin"
strip = "symbols"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
