[package]
name = "zair-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared public formats and types for ZAIR"

[dependencies]
blake2b_simd = { workspace = true }
bytemuck = { workspace = true }
schemars = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["hex"] }
sha2 = { workspace = true }
thiserror = { workspace = true }
zip32 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
