[package]
name = "zair-nonmembership"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Non-membership Merkle tree and nullifier utilities for ZAIR"

[dependencies]
bridgetree = { workspace = true }
ff = { workspace = true }
incrementalmerkletree = { workspace = true }
jubjub = { workspace = true }
orchard = { workspace = true }
pasta_curves = { workspace = true }
rayon = { workspace = true }
sapling = { workspace = true }
thiserror = { workspace = true }
zair-core = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }

[lints]
workspace = true
