[package]
name = "zair-orchard-proofs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Orchard claim proving and verification for ZAIR"

[features]
default = ["verify"]
verify = []
prove = []

[dependencies]
ff = { workspace = true }
group = { workspace = true }
halo2_proofs = { workspace = true }
orchard = { workspace = true, features = ["circuit", "std"] }
pasta_curves = { workspace = true }
thiserror = { workspace = true }
zair-core = { workspace = true }
zair-orchard-circuit = { workspace = true }

rand = { version = "0.8", default-features = false, features = ["getrandom"] }

# Adapted halo2/orchard proving code; default lints only.
[lints]
