[package]
name = "zair-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SDK/library workflow logic for ZAIR"

[features]
default = ["prove"]
# Enables Sapling proving/keygen helpers (verification stays available without this).
prove = ["zair-sapling-proofs/prove", "zair-orchard-proofs/prove"]

[dependencies]
eyre = { workspace = true }
http = { workspace = true }
orchard = { workspace = true }
redjubjub = { workspace = true }
sapling = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["hex"] }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
  "sync",
] }
tracing = { workspace = true }
zcash_keys = { workspace = true, features = ["orchard", "sapling"] }
zcash_protocol = { workspace = true }
zcash_spec = { workspace = true }
zip32 = { workspace = true }

zair-core = { workspace = true }
zair-nonmembership = { workspace = true }
zair-orchard-proofs = { workspace = true }
zair-sapling-proofs = { workspace = true }
zair-scan = { workspace = true }

bellman = { workspace = true }
bip39 = { workspace = true }
bls12_381 = { workspace = true }
group = { workspace = true }
halo2_proofs = { workspace = true }
hex = { workspace = true, features = ["serde"] }
jubjub = { workspace = true }
pasta_curves = { workspace = true }
rand_core = { workspace = true }
rpassword = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
secrecy = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
